--- a/src/SFA.DAS.Recruit.Jobs/SFA.DAS.Recruit.Jobs.csproj
+++ b/src/SFA.DAS.Recruit.Jobs/SFA.DAS.Recruit.Jobs.csproj
@@ -2,11 +2,15 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net472</TargetFramework>
-    <IsWebJobProject>true</IsWebJobProject>
-    <WebJobName>$(AssemblyName)</WebJobName>
-    <WebJobType>Continuous</WebJobType>
+    <TargetFramework>net8.0</TargetFramework>
+    <UserSecretsId>recruit-webjob</UserSecretsId>
+    <Nullable>enable</Nullable>
+    <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
   </PropertyGroup>
+
+  <ItemGroup>
+    <InternalsVisibleTo Include="SFA.DAS.Recruit.Jobs.UnitTests" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.WebJobs" Version="3.0.39" />
