FAI-2427 - Initial project setup

--- a/src/SFA.DAS.Recruit.Jobs/appsettings.json
+++ b/src/SFA.DAS.Recruit.Jobs/appsettings.json
@@ -1,3 +1,14 @@
 {
-  "AzureWebJobsStorage": ""
+  "AllowedHosts": "*",
+  "APPLICATIONINSIGHTS_CONNECTION_STRING": "",
+  "AzureWebJobsStorage": "",
+  "ConfigNames": "SFA.DAS.Recruit.Jobs",
+  "ConfigurationStorageConnectionString": "UseDevelopmentStorage=true;",
+  "Environment": "LOCAL",
+  "Logging": {
+    "LogLevel": {
+      "Default": "Warning"
+    }
+  },
+  "Version": "1.0"
 }
