FAI-2427 Create Sql repository and migrate data (WIP)

--- a/src/SFA.DAS.Recruit.Jobs/appsettings.json
+++ b/src/SFA.DAS.Recruit.Jobs/appsettings.json
@@ -2,7 +2,7 @@
   "AllowedHosts": "*",
   "APPLICATIONINSIGHTS_CONNECTION_STRING": "",
   "AzureWebJobsStorage": "",
-  "ConfigNames": "SFA.DAS.Recruit.Jobs",
+  "ConfigNames": "SFA.DAS.Recruit.Jobs,SFA.DAS.Encoding",
   "ConfigurationStorageConnectionString": "UseDevelopmentStorage=true;",
   "Environment": "LOCAL",
   "Logging": {
