--- a/src/SFA.DAS.Recruit.Jobs/local.settings.json
+++ b/src/SFA.DAS.Recruit.Jobs/local.settings.json
@@ -4,7 +4,7 @@
         "AzureFunctionsJobHost:Logging:LogLevel:Host": "Information",
         "AzureWebJobsStorage": "UseDevelopmentStorage=true",
         "ConfigurationStorageConnectionString": "UseDevelopmentStorage=true;",
-        "ConfigNames": "SFA.DAS.Recruit.Jobs,SFA.DAS.Encoding",
+        "ConfigNames": "SFA.DAS.Recruit.Jobs_2.0,SFA.DAS.Encoding_1.0",
         "EnvironmentName": "LOCAL",
         "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated",
         "Subscription": "sfa.das.recruit.jobs",
