Implment initial recruit jobs work]#

--- a/pipeline-templates/job/code-build.yml
+++ b/pipeline-templates/job/code-build.yml
@@ -12,11 +12,10 @@ jobs:
   - group: BUILD Management Resources
   steps:
   - template: azure-pipelines-templates/build/step/gitversion.yml@das-platform-building-blocks
-
   - template: azure-pipelines-templates/build/step/app-build.yml@das-platform-building-blocks
 
   - task: DotNetCoreCLI@2
-    displayName: Publish - dotnet publish ${{ parameters.SolutionBaseName }}
+    displayName: Publish - dotnet publish ${{ parameters.SolutionBaseName }}.Jobs
     inputs:
       command: publish
       publishWebProjects: false #set to false as this setting (which defaults to true) will parse the entire repo for web projects
