--- a/pipeline-templates/job/code-build.yml
+++ b/pipeline-templates/job/code-build.yml
@@ -14,6 +14,7 @@ jobs:
   - template: azure-pipelines-templates/build/step/gitversion.yml@das-platform-building-blocks
   - template: azure-pipelines-templates/build/step/app-build.yml@das-platform-building-blocks
     parameters:
+      SonarCloudProjectKey: SkillsFundingAgency_das-recruit-jobs
       ContinueOnVulnerablePackageScanError: true 
 
   - task: DotNetCoreCLI@2
