--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,6 +51,7 @@ stages:
   variables:
   - group: DevTest Management Resources
   - group: AT DevTest Shared Resources
+  - group: AT das-recruit-jobs
   jobs:
   - template: pipeline-templates/job/deploy.yml
     parameters:
@@ -65,6 +66,7 @@ stages:
   variables:
   - group: DevTest Management Resources
   - group: TEST DevTest Shared Resources
+  - group: TEST das-recruit-jobs
   jobs:
   - template: pipeline-templates/job/deploy.yml
     parameters:
@@ -79,6 +81,7 @@ stages:
   variables:
   - group: DevTest Management Resources
   - group: TEST2 DevTest Shared Resources
+  - group: TEST2 das-recruit-jobs
   jobs:
   - template: pipeline-templates/job/deploy.yml
     parameters:
@@ -93,6 +96,7 @@ stages:
   variables:
   - group: PreProd Management Resources
   - group: PreProd Shared Resources
+  - group: PREPROD das-recruit-jobs
   jobs:
   - template: pipeline-templates/job/deploy.yml
     parameters:
@@ -133,6 +137,7 @@ stages:
   variables:
   - group: DevTest Management Resources
   - group: DEMO DevTest Shared Resources
+  - group: DEMO das-recruit-jobs
   jobs:
   - template: pipeline-templates/job/deploy.yml
     parameters:
