--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,7 @@ resources:
   - repository: das-platform-building-blocks
     type: github
     name: SkillsFundingAgency/das-platform-building-blocks
-    ref: refs/tags/2.2.18
+    ref: refs/heads/DASD-13089
     endpoint: SkillsFundingAgency
   - repository: das-platform-automation
     type: github
