--- a/src/SFA.DAS.Recruit.Jobs.UnitTests/SFA.DAS.Recruit.Jobs.UnitTests.csproj
+++ b/src/SFA.DAS.Recruit.Jobs.UnitTests/SFA.DAS.Recruit.Jobs.UnitTests.csproj
@@ -10,11 +10,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="coverlet.collector" Version="6.0.0"/>
+        <PackageReference Include="coverlet.collector" Version="6.0.4">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="FluentAssertions" Version="7.2.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
         <PackageReference Include="NUnit" Version="4.3.2" />
-        <PackageReference Include="NUnit.Analyzers" Version="4.6.0">
+        <PackageReference Include="NUnit.Analyzers" Version="4.7.0">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
