Added in Recruit Comos Connection String

--- a/pipeline-templates/job/deploy.yml
+++ b/pipeline-templates/job/deploy.yml
@@ -42,6 +42,8 @@ jobs:
             TargetFileName: '*.schema.json'
             TableName: Configuration
             Version: '2.0'
+            ConfigurationSecrets:
+              RecruitCosmosConnectionString: $(RecruitCosmosConnectionString)
         - template: azure-pipelines-templates/deploy/step/function-deploy.yml@das-platform-building-blocks
           parameters:
             ServiceConnection: ${{ parameters.ServiceConnection }}
