--- a/src/SFA.DAS.Recruit.Jobs.UnitTests/SFA.DAS.Recruit.Jobs.UnitTests.csproj
+++ b/src/SFA.DAS.Recruit.Jobs.UnitTests/SFA.DAS.Recruit.Jobs.UnitTests.csproj
@@ -14,6 +14,10 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="coverlet.msbuild" Version="6.0.4">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="FluentAssertions" Version="7.2.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
         <PackageReference Include="NUnit" Version="4.3.2" />
