--- a/src/SFA.DAS.Recruit.Jobs.UnitTests/SFA.DAS.Recruit.Jobs.UnitTests.csproj
+++ b/src/SFA.DAS.Recruit.Jobs.UnitTests/SFA.DAS.Recruit.Jobs.UnitTests.csproj
@@ -26,6 +26,7 @@
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="NUnit3TestAdapter" Version="5.0.0" />
+        <PackageReference Include="SFA.DAS.Testing.AutoFixture" Version="17.1.146" />
     </ItemGroup>
 
     <ItemGroup>
