--- a/pipeline-templates/job/deploy.yml
+++ b/pipeline-templates/job/deploy.yml
@@ -44,6 +44,7 @@ jobs:
             Version: '2.0'
             ConfigurationSecrets:
               RecruitCosmosConnectionString: $(RecruitCosmosConnectionString)
+              RecruitJobsApimSubscriptionKey: $(RecruitJobsApimSubscriptionKey)
         - template: azure-pipelines-templates/deploy/step/function-deploy.yml@das-platform-building-blocks
           parameters:
             ServiceConnection: ${{ parameters.ServiceConnection }}
