--- a/pipeline-templates/job/deploy.yml
+++ b/pipeline-templates/job/deploy.yml
@@ -31,7 +31,15 @@ jobs:
             TemplateSecrets:
               LoggingRedisConnectionString: $(LoggingRedisConnectionString)
               ConfigurationStorageConnectionString: $(ConfigurationStorageConnectionString)
-              SharedStorageAccountConnectionString: $(SharedStorageAccountConnectionString)      
+              SharedStorageAccountConnectionString: $(SharedStorageAccountConnectionString)
+        - template: azure-pipelines-templates/deploy/step/get-apim-subscription-key.yml@das-platform-building-blocks
+          parameters:
+            ServiceConnection: ${{ parameters.ServiceConnection }}
+            ApimResourceGroup: $(SharedApimResourceGroup)
+            ApimName: $(SharedApimName)
+            SubscriptionId: $(FunctionAppName)
+            PipelineVariableName: RecruitJobsApimSubscriptionKey
+            IsMultiRepoCheckout: true
         - template: azure-pipelines-templates/deploy/step/generate-config.yml@das-platform-building-blocks
           parameters:
             EnvironmentName: $(EnvironmentName)
@@ -44,6 +52,7 @@ jobs:
             Version: '2.0'
             ConfigurationSecrets:
               RecruitCosmosConnectionString: $(RecruitCosmosConnectionString)
+              RecruitJobsApimSubscriptionKey: $(RecruitJobsApimSubscriptionKey)
         - template: azure-pipelines-templates/deploy/step/function-deploy.yml@das-platform-building-blocks
           parameters:
             ServiceConnection: ${{ parameters.ServiceConnection }}
