--- a/src/SFA.DAS.Recruit.Jobs/local.settings.json
+++ b/src/SFA.DAS.Recruit.Jobs/local.settings.json
@@ -7,6 +7,7 @@
         "ConfigNames": "SFA.DAS.Recruit.Jobs_2.0,SFA.DAS.Encoding_1.0",
         "EnvironmentName": "LOCAL",
         "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated",
+        "NServiceBusConnectionString": "UseLearningEndpoint=true",
         "Subscription": "sfa.das.recruit.jobs",
         "Version": "2.0"
     },
