--- a/src/SFA.DAS.Recruit.Jobs/SFA.DAS.Recruit.Jobs.csproj
+++ b/src/SFA.DAS.Recruit.Jobs/SFA.DAS.Recruit.Jobs.csproj
@@ -26,6 +26,7 @@
     <PackageReference Include="Polly.Contrib.WaitAndRetry" Version="1.1.1" />
     <PackageReference Include="SFA.DAS.Configuration.AzureTableStorage" Version="17.1.138" />
     <PackageReference Include="SFA.DAS.Encoding" Version="1.1.76" />
+    <PackageReference Include="SFA.DAS.ProviderRelationships.Messages" Version="4.0.19" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
