Add NServiceBusLicense to deployment configuration

--- a/pipeline-templates/job/deploy.yml
+++ b/pipeline-templates/job/deploy.yml
@@ -51,6 +51,7 @@ jobs:
             TableName: Configuration
             Version: '2.0'
             ConfigurationSecrets:
+              NServiceBusLicense: $(NServiceBusLicense)
               RecruitCosmosConnectionString: $(RecruitCosmosConnectionString)
               RecruitJobsApimSubscriptionKey: $(RecruitJobsApimSubscriptionKey)
         - template: azure-pipelines-templates/deploy/step/function-deploy.yml@das-platform-building-blocks
