--- a/src/SFA.DAS.Recruit.Jobs/SFA.DAS.Recruit.Jobs.csproj
+++ b/src/SFA.DAS.Recruit.Jobs/SFA.DAS.Recruit.Jobs.csproj
@@ -20,13 +20,11 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.14" />
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="9.0.9" />
     <PackageReference Include="MongoDB.Driver" Version="2.23.1" />
+    <PackageReference Include="NServiceBus.AzureFunctions.Worker.ServiceBus" Version="6.0.1" />
     <PackageReference Include="Polly" Version="8.5.2" />
     <PackageReference Include="Polly.Contrib.WaitAndRetry" Version="1.1.1" />
     <PackageReference Include="SFA.DAS.Configuration.AzureTableStorage" Version="17.1.138" />
     <PackageReference Include="SFA.DAS.Encoding" Version="1.1.76" />
-    <PackageReference Include="SFA.DAS.NServiceBus" Version="17.0.49" />
-    <PackageReference Include="SFA.DAS.Notifications.Messages" Version="3.0.10" />
-    <PackageReference Include="NServiceBus" Version="7.8.5" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
